[tool.poetry]
name = "warships"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kapustinskii <hunterelf1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
PyQt5 = "^5.15.9"
pytest = "^7.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
